# Loco-RAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  schemas.py
backend/app/models/: __init__.py
backend/app/routers/: chat.py  conversations.py  documents.py  models.py  prompts.py  search.py  voice.py
backend/app/services/: agent.py  embeddings.py  ingest.py  memory.py  rag.py  websearch.py
backend/app/services/llm/: __init__.py  base.py
backend/app/services/vectorstore/: __init__.py  base.py  chroma.py  lance.py
backend/samples/: local-llm-rag-overview.md
backend/scripts/: seed.py
backend/tests/: test_chunking.py
docs/: README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: Composer.tsx  DocPanel.tsx  Markdown.tsx  MessageList.tsx  SettingsPanel.tsx  Sidebar.tsx  SourcePanel.tsx  TopBar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
frontend/src/store/: useStore.ts
