[project]
name = "local-llm-rag-backend"
version = "0.1.0"
description = "FastAPI backend for local LLM chat with RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    "tiktoken>=0.8",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "markdown-it-py>=3.0",
    "chromadb>=0.5.20",
    "lancedb>=0.15",
    "pyarrow>=18.0",
    "fastembed>=0.4",
    "rank-bm25>=0.2.2",
    "duckduckgo-search>=6.3",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

# Explicit package discovery: the build only ships the `app` package (and `scripts`).
# `samples/` is data and `tests/` are not installed, so flat-layout auto-discovery
# must not try to treat them as packages.
[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
